@@ -8,7 +8,8 @@ Version 1.3.1+svn:
    * new translations: Indonesian
  * WML engine
    * new [own_village] condition to check if someone own a particular village
-   * new [store_owned_villages] tag to store all the owned village by a side
+   * new [store_villages] tag to store village locations
+   * all [store_*] tags get a default variable name
 
 Version 1.3.1:
  * Campaignd
